force-app/main/default/objects/HealthCheckSummary__c/HealthCheckSummary__c.object-meta.xml
<CustomObject>
    <label>HealthCheck</label>
    <nameField>
        <displayFormat>H{0000}</displayFormat>
        <label>HealthCheck Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HealthChecks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>