force-app/main/default/objects/HealthCheckSummary__c/fields/Compliant__c.field-meta.xml
<CustomField>
    <fullName>Compliant__c</fullName>
    <label>Compliant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>