force-app/main/default/objects/HealthCheckSummary__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>