force-app/main/default/objects/HealthCheckSummary__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <label>Risks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>